@@ -30,6 +30,7 @@ v0.3
 * defineProperty for IE9
 * Mobile
 * Alpha - thanks to Josh Tynjala
+* areaMap will automatically offset when a polygon is passed - thanks to Adrian Gaudebert
 * Drawing optimization
 * More Audio instances - thanks to Josh Tynjala
 * Loader accepts onProgress and onError callbacks with info on what is loaded and percentages - thanks to Josh Tynjala
